main-toolbar: Missing break in case statement

gcc7 is complainting about an implicit-fallthrough situation: a missing
break in a case statement.

This commit adds that to the code.

https://bugzilla.gnome.org/show_bug.cgi?id=783465